Remove extra <br> in info cards. - also fix overlapping caption

--- a/main.css
+++ b/main.css
@@ -445,9 +445,8 @@ span.highlight:hover {
 }
 
 blockquote + .caption{
-  margin-top: -20px;
+  margin-top: 0px;
 }
-
 
 .TableOfHotsDiv {
   clear: both;
